--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "nodemailer": "^6.3.1",
     "path": "^0.12.7",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.8.6",
+    "react-particles-js": "^2.7.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1"
   },
   "scripts": {
