--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "env": "^0.0.2",
+    "node-sass": "^4.13.0",
     "nodemailer": "^6.3.1",
+    "particle.js": "^1.0.7",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.14",
