--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.8.6",
+    "react-gist": "^1.2.1",
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.8",
