--- a/package.json
+++ b/package.json
@@ -40,5 +40,15 @@
   "devDependencies": {
     "netlify-lambda": "^1.4.5",
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "description": "This project is a reference demo showing you how to use [Create React App v3](https://github.com/facebookincubator/create-react-app) and [netlify-lambda v1](https://github.com/netlify/netlify-lambda) together in a [Netlify Dev](https://www.netlify.com/docs/cli/?utm_source=github&utm_medium=swyx-CRAL&utm_campaign=devex#netlify-dev-beta) workflow. You can clone this and immediately be productive with a React app with serverless Netlify Functions in the same repo. Alternatively you can deploy straight to Netlify with this one-click Deploy:",
+  "main": "index.js",
+  "repository": "git+https://github.com/belke05/henridev_v2.git",
+  "keywords": [],
+  "author": "belke05 <you@example.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/belke05/henridev_v2/issues"
+  },
+  "homepage": "https://github.com/belke05/henridev_v2#readme"
 }
